ui team list dan member list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".OurScheduleDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".TeamActivity"
+            android:exported="false" />
+        <activity
             android:name=".OurScheduleActivity"
             android:exported="false" />
         <activity
